# iris-distro

./: .gitignore  CMakeLists.txt  Readme.md  package.xml
src/: CMakeLists.txt
src/cxx/: geometry.cpp  iris.cpp  iris_demo.cpp  iris_mosek.cpp  iris_wrapper.cpp
src/cxx/cvxgen/: CMakeLists.txt
src/cxx/iris/: geometry.h  iris_mosek.h
src/python/examples/: iris_2d.ipynb  polyhedrons.ipynb
src/python/irispy/test/: python_interface_test.py  test_iris_3d.py
