<?xml version="1.0"?>
<package format="2">
  <name>iris_distro</name>
  <version>0.0.0</version>
  <description>The iris_distro spackage</description>
  <maintainer email="Zy3144976384@gmail.com">caodong</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>

</package>
